# StruMind

backend/: main.py  requirements.txt
engine/: README.md  requirements.txt
engine/core/: material_library.py  section_library.py
engine/core/analysis/: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  cpp_solver_stub.cpp  loads.py  py_solver_bindings.cpp  solver.py
engine/core/api/: engine_api.py  main.py
engine/core/bim/: ifc.py
engine/core/design/: code_check.py
engine/core/detailing/: drawing.py
engine/core/elements/: advanced_connection.py  beam.py  cable.py  column.py  connection.py  higher_order_shell.py  higher_order_solid.py  plate.py  shell.py  solid.py  timoshenko_beam.py
engine/core/geometry/: analytical_model.py  physical_model.py
engine/core/utils/: math_helpers.py
engine/docs/: architecture.md
engine/examples/: advanced_frame_analysis.py  basic_workflow.py  cpp_solver_example.py  mixed_structure_example.py  truss_example.py
engine/gui/: qt_main.py
engine/tests/: test_code_checks.py  test_fem_solver.py  test_shell_solid.py
engine/visualization/: opengl_stub.py  opengl_viewer.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
